--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bark",
+  "name": "barkline",
   "version": "1.0.0",
   "description": "An ugly son of a bar chart and a sparkline. Based on https://github.com/ajacksified/Clark/ by Jack Lawson.",
   "main": "index.js",
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git", 
-    "url": "https://github.com/razumau/bark"
+    "url": "https://github.com/razumau/barkline"
   },
   "keywords": [
     "graph",
